--- a/BasicHistoryApi/app/src/main/res/menu/main.xml
+++ b/BasicHistoryApi/app/src/main/res/menu/main.xml
@@ -17,11 +17,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-
     <item android:id="@+id/action_update_data"
         android:title="@string/action_update_session"
         android:orderInCategory="100"
@@ -29,6 +24,11 @@
 
     <item android:id="@+id/action_delete_data"
         android:title="@string/action_delete_session"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
+    <item android:id="@+id/action_signoout"
+        android:title="@string/action_signout"
         android:orderInCategory="100"
         app:showAsAction="never" />
 </menu>
