Migrates step counter sample to Kotlin
- Adds ACTIVITY_RECOGNITION permission request for Android 10
- Migrates to Jetpack
- Migrates from GoogleSignIn#getLastSignedInAccount to
  getAccountForExtension
- Updates Google Play versions, Android component versions, Gradle etc

--- a/StepCounterKotlin/app/src/main/res/menu/main.xml
+++ b/StepCounterKotlin/app/src/main/res/menu/main.xml
@@ -23,7 +23,7 @@ limitations under the License.
         app:showAsAction="never" />
 
     <item android:id="@+id/action_read_data"
-        android:title="Read step data"
+        android:title="@string/read_step_data"
         android:orderInCategory="100"
         app:showAsAction="never" />
 
